# website_portfolio

./: Dockerfile  docker-compose.yml
app/: app.py  main.py  pyproject.toml
app/static/css/: style.css
app/static/scripts/: script.js
app/templates/: about.html  base.html  blog.html  contacts.html  home.html  index.html  portfolio.html
