[tool.poetry]
name = "your-fastapi-project"
version = "0.1.0"
description = "A FastAPI application."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
pydantic = "^2.7.0"
httpx = "^0.27.0"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
